更新 合作團隊 資料

--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
@@ -5,8 +5,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/144835366.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">吳舜堂 教授</p>
                     <p class="collaborative-partner-member-content-department">單位：通識教務中心</p>
                 </div>
@@ -14,8 +14,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(1)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/250107907.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337219271.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">張若菡 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
@@ -23,8 +23,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(2)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/4.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/763241224.jpg"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">林承謙 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：商業設計系</p>
                 </div>
@@ -32,8 +32,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(3)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">范政揆 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
@@ -41,8 +41,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(4)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">陳殿禮 教授</p>
                     <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
@@ -50,8 +50,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(5)" style="cursor: pointer;">
-                    <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png" alt="成員照片" width="174"
-                        height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">鍾盛賜 教師</p>
                     <p class="collaborative-partner-member-content-department">單位：台中市立東勢高工家具設計科</p>
                 </div>
@@ -101,10 +101,36 @@
         line-height: 1.35;
         letter-spacing: 1px;
     }
+
+    .member-avatar {
+        border-radius: 50%;
+    }
 </style>
 
 <script>
-    const collaborativePartnerMember = [];
+    const collaborativePartnerMember = [
+        {
+            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg',
+            'name': '吳舜堂　老師',
+            'from': `待補`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337219271.jpg',
+            'name': '張若菡　老師',
+            'from': `待補`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/763241224.jpg',
+            'name': '林承謙　老師',
+            'from': `待補`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+    ];
 
     function showPartnerMemberModal(index) {
         if (!collaborativePartnerMember[index]) {
