--- a/Desktop/合作團隊/善循環經濟的實踐/合作團隊成員.html
+++ b/Desktop/合作團隊/善循環經濟的實踐/合作團隊成員.html
@@ -51,9 +51,9 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(5)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/567669650.png"
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/765198064.jpg"
                         alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">黃志弘 院長</p>
+                    <p class="collaborative-partner-member-content-name">黃志弘 教授</p>
                     <p class="collaborative-partner-member-content-department">單位：設計學院</p>
                 </div>
             </div>
@@ -125,7 +125,49 @@
             'from': `國立臺北科技大學\n創新設計研究所碩士`,
             'skill': '創新設計、設計策略、永續設計、醫療與健康產品開發',
             'intro': '范政揆副教授擔任創新設計與知識管理研發中心主任，於創新產品設計、創新與設計策略、醫療健康照護、永續發展和跨域整合上多有著墨，歷年來指導學生榮獲國內外百項設計獎，近年致力於循環經濟與永續設計，從跨域整合的角度結合企業 CSR 和大學的 USR 的能量，以聯合國永續發展的 17 項指標為標的,期望透過Design for SDGs 的手法，讓創新與設計來改變社會與世界。',
-        }
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'name': '陳慶暉 處長',
+            'from': `光寶科技永續發展委員會`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'name': '劉大琦 助理教授',
+            'from': `南臺科技大學 創新產品設計系`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'name': '黃孟凡 專案講師',
+            'from': `臺北科技大學 工業設計系`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'name': '朱莉蕎 專案講師',
+            'from': `臺北科技大學 工業設計系`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/765198064.jpg',
+            'name': '黃志弘　老師',
+            'from': `臺北科技大學建築系教授 兼 設計學院院長`,
+            'skill': '社區規劃、原民建築、建築施工設計、都市設計、建築景觀規劃',
+            'intro': '2009年起，執行千千岩助太郎校長台灣原住民建築調查測繪圖稿數位典藏計畫，並於 2012 年同楊詩弘教授共同整理出版《千千岩助太郎台灣高砂族住家調查測繪手稿全集》上、下冊，期間已完成 泰雅、布農、雅美等七族數位典藏建置，透過千千岩助太郎 手繪史料應用，於南投眉溪部落賽德克族的傳統家屋復原、尖石國中泰雅部落進行鄉土課程推動，實踐自立造屋「瞭望塔」。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'name': '蘇昭瑾 研發長',
+            'from': `臺北科技大學`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
     ];
 
     function showPartnerMemberModal(index) {
