--- a/Desktop/檔案下載/校內下載.html
+++ b/Desktop/檔案下載/校內下載.html
@@ -55,7 +55,7 @@
                     <td class="text-nowrap">2020-11-12</td>
                     <td>110年度USR種子計畫徵件辦法_附件_計劃書格式</td>
                     <td>
-                        <a href="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3374/724347378.docx"
+                        <a href="https://osausr.ntut.edu.tw/var/file/1/1001/img/3374/881218344.docx"
                             class="text-primary text-decoration-none" target="_blank">
                             <i class="fas fa-file-word fa-lg"></i>
                         </a>
