--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
@@ -136,6 +136,20 @@
             'from': `國立臺北科技大學\n創新設計研究所碩士`,
             'skill': '創新設計、設計策略、永續設計、醫療與健康產品開發',
             'intro': '范政揆副教授擔任創新設計與知識管理研發中心主任，於創新產品設計、創新與設計策略、醫療健康照護、永續發展和跨域整合上多有著墨，歷年來指導學生榮獲國內外百項設計獎，近年致力於循環經濟與永續設計，從跨域整合的角度結合企業 CSR 和大學的 USR 的能量，以聯合國永續發展的 17 項指標為標的,期望透過Design for SDGs 的手法，讓創新與設計來改變社會與世界。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
+            'name': '陳殿禮 教授',
+            'from': `待補`,
+            'skill': '待補。',
+            'intro': '待補。',
+        },
+        {
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png',
+            'name': '鍾盛賜 教師',
+            'from': `待補`,
+            'skill': '待補。',
+            'intro': '待補。',
         }
     ];
 
