--- a/Desktop/合作團隊/青銀共創．友善療癒綠社區/心得回饋.html
+++ b/Desktop/合作團隊/青銀共創．友善療癒綠社區/心得回饋.html
@@ -5,9 +5,9 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片" width="174"
-                    height="174">
-                <span class="collaborative-partner-feedback-author">同學 A</span>
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/409806343.png"
+                    alt="心得作者照片" width="174" height="174">
+                <span class="collaborative-partner-feedback-author">建都所: 徐惠筠</span>
             </div>
         </span>
         <div class="collaborative-partner-feedback col-12 col-xl-8 mt-3 mt-xl-0">
@@ -77,13 +77,17 @@
         border-width: 40px 0 40px 70px;
         border-color: transparent transparent transparent #ffffff;
     }
+
+    .student-avatar {
+        border-radius: 50%;
+    }
 </style>
 
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png',
-            'name': '同學 A',
+            'avatar': "https://osausr.ntut.edu.tw/var/file/1/1001/img/3379/409806343.png",
+            'name': '建都所: 徐惠筠',
             'content':
                 `起初參與計畫時，其實很納悶在繁忙的都市裡要怎麼建置療癒綠社區？心中滿滿的疑惑在的繁忙的城裡市怎麼療癒？帶著許多困頓進入社區現況掃描調查，在調查的過程頓時間才發掘到，其實繁忙的忠孝東路、新生南路、建國南路與仁愛路所包圍的社區，是個被繁忙的商辦及快速的車流外衣所為包圍的優美秘境社區，擁有台北市很難得看見的綠廊秘境，甚至擁有許多日式舊宿舍，留下許多歷史脈絡之串聯的線索，走在社區巷弄內發現許多獨立工作室如：烘焙工作室、音樂工作室、拼布工作室、品酒館、花坊等，擁有綠意與藝術創作的巷弄框間，整體社區調查的過程總是充滿驚奇，調查現況拍攝過程，腦中已開始隨的社區豐富資源起舞，想了很多規劃點子，迫不期待想趕緊將設去現況特色作規劃串聯社區療癒路徑。
                 \n現況調查完後，每位組員們憂心社區現況資料不完整，然而討論後決定拜訪里長預想更深入的了解社區問題，從一開始忐忑的與里長聯絡訪談時間，到訪談時間敲定，再到與里長訪談，最後開心順利的與里長進行KJ法的討論，與里長對面的對談過程裡，感受到他對於里民的愛與無怨無會的付出，很感謝里長補充了很多網路所蒐尋不到的資料，替解惑了很多組員們在基地掃描時的疑惑。KJ法的討論完後帶回訪談資料，開始熱絡的小組討論，過程中組員們合作嘗試以製作社區環境模型及建置3D環境建模，討論過程更了解現況環境議題，團隊合作的過程互相學習不同領域的對於社區構想之實踐，是參與計畫過程中可貴的經驗。
