修改公告列表

--- a/Desktop/公告/客製公告CSS.html
+++ b/Desktop/公告/客製公告CSS.html
@@ -13,7 +13,7 @@
     }
 
     .mtitle>a {
-        white-space: nowrap;
+        /* white-space: nowrap; */
         overflow: hidden;
         text-overflow: ellipsis;
         font-size: 25px;
