--- a/Desktop/公告/公告列表.html
+++ b/Desktop/公告/公告列表.html
@@ -1,25 +1,28 @@
 <div class=wrapper>
-    <h1 class="announcement-list-title">最 新 公 告</h1>
-    <hr class="announcement-hr">
-    <img class="announcement-background" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3359/416610935.png" />
+    <div class="row">
+        <h1 class="announcement-list-title w-100 text-center">最 新 公 告</h1>
+    </div>
+    <div class="row justify-content-center">
+        <hr class="announcement-hr">
+    </div>
+    <div id="pageptlistWrapper" class="row justify-content-center"></div>
 </div>
 <style>
     .announcement-list-title {
-        position: absolute;
-        top: 153px;
-        left: 863px;
-        color: #4998b2;
-        line-height: 1.33;
+        padding-top: 153px;
+        white-space: nowrap;
+        font-family: 'SegoeUI';
         font-size: 40px;
+        font-weight: bold;
+        line-height: 1.33;
+        letter-spacing: normal;
+        color: #4998b2;
     }
 
     .announcement-hr {
-        position: absolute;
-        top: 240px;
-        left: 375px;
-        width: 1169.7px;
-        height: 0;
+        margin: 50px 0;
         border: solid 1px #adadad;
+        width: 1169.7px;
     }
 
     .announcement-background {
@@ -28,17 +31,14 @@
     }
 
     #pageptlist {
-        margin-top: 120px;
-        width: 1167px;
-        top: 302px;
-        left: 375px;
-        position: absolute;
+        width: 1170px;
+        margin-bottom: 200px;
     }
 
     .wrapper {
         margin-top: 120px;
-        height: 100vh;
-        position: relative;
+        width: 100vw;
+        background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3359/416610935.png);
     }
 
     .mtitle {
@@ -46,3 +46,10 @@
         border-bottom: 1px solid #d3d3d3;
     }
 </style>
+<script>
+    $(function () {
+        const pageptlist = $('#pageptlist').clone();
+        $('#pageptlist').remove()
+        $('#pageptlistWrapper').append(pageptlist);
+    });
+</script>
