更新 公告列表

--- a/Desktop/公告/公告列表.html
+++ b/Desktop/公告/公告列表.html
@@ -23,6 +23,7 @@
         margin: 50px 0;
         border: solid 1px #adadad;
         width: 1169.7px;
+        max-width: 80vw;
     }
 
     .announcement-background {
@@ -31,7 +32,8 @@
     }
 
     #pageptlist {
-        width: 1170px;
+        padding: 0 50px;
+        width: 1220px;
         margin-bottom: 200px;
     }
 
