更新 合作團隊資料

--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊主題.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/合作團隊主題.html
@@ -13,12 +13,13 @@
 </div>
 <style type="text/css">
     .collaborative-partner-background {
-        background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/591082441.png);
+        background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/608747395.png);
         background-size: cover;
         background-repeat: no-repeat;
         width: 100vw;
         margin-top: 120px;
         height: 636px;
+        background-position: center;
     }
 
     .collaborative-partner-background-content-container {
