--- a/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
+++ b/Desktop/合作團隊/原住民部落安居構築與綠色樂業推動計畫/心得回饋.html
@@ -155,8 +155,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片"
-                    width="174" height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/164807150.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邱品瑄</span>
             </div>
         </span>
@@ -174,8 +174,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png" alt="心得作者照片"
-                    width="174" height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/164807150.jpg"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">建築系: 邱品瑄</span>
             </div>
         </span>
@@ -390,7 +390,7 @@
                 `,
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/2.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3376/164807150.jpg',
             'name': '建築系: 邱品瑄',
             'content':
                 `當初老師在找人加入這個計畫的時候，我掙扎了好久好久，因為暑假本來就有安排活動。但又知道，自己一直以來很喜歡自然與原住名相關的議題，如果這次錯過，不知道什麼時候還會有這個機會，不想後悔的我，還是決定參加了。
