修正 ipad 滑動錯誤

--- a/Desktop/合作團隊/學生心得視窗模板.html
+++ b/Desktop/合作團隊/學生心得視窗模板.html
@@ -31,6 +31,7 @@
     #studentFeedback {
         max-height: 65vh;
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
         font-size: 25px;
         font-family: 'SegoeUI';
         color: #707070;
