--- a/Desktop/合作團隊/善循環經濟的實踐/合作團隊成員.html
+++ b/Desktop/合作團隊/善循環經濟的實踐/合作團隊成員.html
@@ -5,9 +5,8 @@
             <div class="collaborative-partner-member-content col-md-6 col-xl-3">
                 <div class="d-flex flex-column align-items-center" data-aos="flip-left"
                     onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
-                    <img class="member-avatar"
-                        src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3380/836721579.png" alt="成員照片"
-                        width="174" height="174">
+                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/836721579.png"
+                        alt="成員照片" width="174" height="174">
                     <p class="collaborative-partner-member-content-name">范政揆 副教授</p>
                     <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
                 </div>
