--- a/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
+++ b/Desktop/合作團隊/智慧物聯感測漁業/心得回饋.html
@@ -5,8 +5,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/186831725.png"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">資工系：高于梵</span>
             </div>
         </span>
@@ -25,8 +25,8 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
             </div>
         </span>
@@ -38,8 +38,8 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/497165578.png"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">化工系：黃柏睿</span>
             </div>
         </span>
@@ -49,8 +49,8 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png" alt="心得作者照片" width="174"
-                    height="174">
+                <img class="student-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/121674891.png"
+                    alt="心得作者照片" width="174" height="174">
                 <span class="collaborative-partner-feedback-author">化工系：洪丞昱</span>
             </div>
         </span>
@@ -120,6 +120,10 @@
         border-width: 40px 0 40px 70px;
         border-color: transparent transparent transparent #ffffff;
     }
+
+    .student-avatar {
+        border-radius: 50%;
+    }
 </style>
 
 <script>
@@ -135,7 +139,7 @@
             'content': '先前還未加入USR計畫時，從沒想過可將自己所學回饋於社會，在課程中所接觸到的僅僅是些藥品文書儀器，但USR課程帶我走入社會中的弱勢偏鄉地區（雲林口湖），漸漸了解當地居民的難處與生活方式，以我們方式去幫助他們，達到學以致用的效果。',
         },
         {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/29.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3367/121674891.png',
             'name': '化工系：洪丞昱',
             'content': '在加入USR之前都會覺得對於社會沒什麼貢獻。自從加入USR之後由中發現原來我們可以以行動抱負社會為社會做出微薄的貢獻。跟著USR團隊一起打拼也讓我更加自信，原來只是我們願不願意付出。就算只是小小的貢獻，對於團隊；對於社會都是重要的一步。也期待我們能與地方建立更深入更紮實的連結，與USR團隊共創輪換。',
         }
