--- a/Desktop/合作團隊/陶藝文化培力．鶯歌地方創生/心得回饋.html
+++ b/Desktop/合作團隊/陶藝文化培力．鶯歌地方創生/心得回饋.html
@@ -5,7 +5,7 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/1.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png" alt="心得作者照片" width="174"
                     height="174">
                 <span class="collaborative-partner-feedback-author">同學 A</span>
             </div>
@@ -24,7 +24,7 @@
         <div class="col-xl-2 d-none d-xl-block"></div>
         <span class="col-12 col-xl-2 d-block d-xl-none">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
                     height="174">
                 <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
@@ -37,7 +37,7 @@
         </div>
         <span class="col-12 col-xl-2 d-none d-xl-block">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png" alt="心得作者照片" width="174"
                     height="174">
                 <span class="collaborative-partner-feedback-author">同學 B</span>
             </div>
@@ -48,7 +48,7 @@
         data-aos-easing="ease-in-sine">
         <span class="col-12 col-xl-2">
             <div class="d-flex flex-column align-items-center">
-                <img src="https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="心得作者照片" width="174"
+                <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png" alt="心得作者照片" width="174"
                     height="174">
                 <span class="collaborative-partner-feedback-author">同學 C</span>
             </div>
@@ -124,17 +124,17 @@
 <script>
     const collaborativePartnerFeedbacks = [
         {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/1.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/1.png',
             'name': '同學 A',
             'content': '世事總是伴隨時光產生千變萬化的可能性。於鶯歌我們窺見台灣陶瓷產業的璀璨風采，身為陶瓷的心臟地，其盡職盡責地將陶藝之血打入這片土地的四肢百骸，今日雖已逐漸式微，我們卻依舊能於感受到其富有活力並於此暗中洶湧、交織。因此，「地方創生」便試圖將台灣陶瓷產業的可能性以更加多元的面貌體現，賦予全新定位，使鶯歌令人雋永的工藝美學及歷史文化得以萬代千秋。',
         },
         {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/3.png',
             'name': '同學 B',
             'content': '身處過輝煌時期的師傅想要傳承卻已經無力再革新，投入教育現場，真正日後投入產業的人極少，市場的變遷及從業氛圍也讓人卻步。透過USR計畫的執行，篩選真的想投入行業的學員，在執行層面以及最終的成果展現，更能有實質的成效。',
         },
         {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3371/5.png',
+            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/5.png',
             'name': '同學 C',
             'content': '鶯歌代表著台灣陶瓷的生命力，富有創意的創作者，帶著勇氣在這片土地打拼，在200年前就開始努力創新。透過在地創生，希望能再次繁榮此地，為鶯歌帶來新氣象。時代在進步，而鶯歌擁有絕佳的基礎，相信未來能再回到世界舞台。',
         }
