更新 頁首 頁尾

--- a/Desktop/頁尾_一般頁面用.html
+++ b/Desktop/頁尾_一般頁面用.html
@@ -1,8 +1,9 @@
 <div id="Footer" class="d-flex align-items-center text-white w-100">
     <div class="d-block d-md-none container-fluid px-0">
         <div class="row text-center">
-            <div class="col-12">
-                <img id="footerLogo" class="m-0" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png">
+            <div class="col-12 d-flex justify-content-center">
+                <img id="footerLogo" class="shake-slow m-0"
+                    src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png">
             </div>
             <div class="col-12 mt-4">
                 <div class="d-flex flex-column">
@@ -20,7 +21,8 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-8 col-xl-6">
                 <div class="d-flex flex-row align-items-center">
-                    <img id="footerLogo" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png">
+                    <img class="shake-slow" id="footerLogo"
+                        src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png">
                     <div class="d-flex flex-column">
                         <p class="footer-title m-0">
                             <a class="text-decoration-none text-white" href="https://www.ntut.edu.tw/" target="_blank"
