--- a/Desktop/頁首.html
+++ b/Desktop/頁首.html
@@ -191,7 +191,7 @@
     <div class="container-fluid d-flex align-items-center justify-content-center px-0 mx-0">
         <div class="row px-3" style="background: #4998b2; min-height:120px; width: 100vw;">
             <nav class="navbar navbar-expand-xl navbar-dark col-xl-12">
-                <a class="navbar-brand" href="https://osausr.ntut.edu.tw/p/426-1001-25.php?Lang=zh-tw">
+                <a class="navbar-brand" href="https://osausr.ntut.edu.tw/">
                     <img alt="社會責任實踐計畫" class="d-inline-block align-top" height="30" id="nav-img" loading="lazy"
                         src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3332/1.png" />
                 </a>
