更新 場域地圖

--- a/Desktop/實踐成果/場域地圖.html
+++ b/Desktop/實踐成果/場域地圖.html
@@ -1,49 +1,48 @@
-<section class="d-none d-lg-block" id="Section_Activity_Region">
+<section id="Section_Activity_Region" class="d-none d-lg-block">
     <div class="activity-region-container">
         <h1 class="activity-region-title animate__animated animate__jello">場 域 地 圖</h1>
 
         <h1 class="activity-region-sub-title animate__animated animate__jello">TAIWAN</h1>
-        <img class="image-taiwan" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/785184148.png" /> <img
-            class="image-wave" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/146602374.png" /> <img
-            class="image-people" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/889880339.png"
-            data-aos="zoom-in-down" data-aos-duration="1000" />
+        <img class="image-taiwan" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/416460590.png" />
+        <img class="image-wave" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/146602374.png" />
         <img class="icon-location" id="icon-location-A"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/112303707.png" data-aos="zoom-in-up"
             data-aos-duration="1000" />
         <img class="icon-location" id="icon-location-B"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/112303707.png" data-aos="zoom-in-up"
             data-aos-duration="1000" />
         <img class="icon-location" id="icon-location-C"
-            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/120099398.png" data-aos="zoom-in-up"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/112303707.png" data-aos="zoom-in-up"
             data-aos-duration="1000" />
-        <div class="activity-region-content-container" id="content-A"><span
-                class="activity-region-content-title-border"></span>
-
+        <img class="icon-location" id="icon-location-D"
+            src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/112303707.png" data-aos="zoom-in-up"
+            data-aos-duration="1000" />
+        <div class="rectangle"></div>
+        <div class="activity-region-content-container" id="content-A">
+            <span class="activity-region-content-title-border"></span>
             <p class="activity-region-content-title">台北</p>
-
             <p class="activity-region-content">北科 社會責任辦公室</p>
-
             <p class="activity-region-content-date">Since 2018</p>
         </div>
 
-        <div class="activity-region-content-container" id="content-B"><span
-                class="activity-region-content-title-border"></span>
-
+        <div class="activity-region-content-container" id="content-B">
+            <span class="activity-region-content-title-border"></span>
             <p class="activity-region-content-title">新竹</p>
-
-            <p class="activity-region-content">原住民安居構築<br />
-                與綠色樂業推動計畫</p>
-
+            <p class="activity-region-content">原住民安居構築<br />與綠色樂業推動計畫</p>
             <p class="activity-region-content-date">2019.02-2019.10</p>
         </div>
 
-        <div class="activity-region-content-container" id="content-C"><span
-                class="activity-region-content-title-border"></span>
-
+        <div class="activity-region-content-container" id="content-C">
+            <span class="activity-region-content-title-border"></span>
             <p class="activity-region-content-title">屏東</p>
-
             <p class="activity-region-content">在地「富育」計畫 - 牡丹鄉</p>
+            <p class="activity-region-content-date">2019.02-2019.10</p>
+        </div>
 
+        <div class="activity-region-content-container" id="content-D">
+            <span class="activity-region-content-title-border"></span>
+            <p class="activity-region-content-title">馬祖</p>
+            <p class="activity-region-content">在地「富育」計畫 - 牡丹鄉</p>
             <p class="activity-region-content-date">2019.02-2019.10</p>
         </div>
     </div>
@@ -53,14 +52,14 @@
         margin-top: 105px;
         position: relative;
         width: 100vw;
-        height: 987px;
+        min-height: 987px;
         background-image: linear-gradient(to bottom, #ccf1fd, var(--white) 71%);
     }
 
     .activity-region-title {
         position: absolute;
-        top: 192px;
-        left: 243px;
+        top: 110px;
+        left: 178px;
         color: #4998b2;
         font-size: 45px;
         line-height: 1.33;
@@ -69,8 +68,8 @@
 
     .activity-region-sub-title {
         position: absolute;
-        top: 260px;
-        left: 245px;
+        top: 178px;
+        left: 180px;
         font-size: 35px;
         color: #999999;
         z-index: 10;
@@ -90,12 +89,12 @@
 
     #icon-location-A {
         top: 83px;
-        left: 1315px;
+        left: 1363px;
     }
 
     #icon-location-B {
         top: 220px;
-        left: 1200px;
+        left: 1216px;
     }
 
     #icon-location-C {
@@ -103,19 +102,29 @@
         left: 1168px;
     }
 
+    #icon-location-D {
+        top: 163px;
+        left: 614px;
+    }
+
     #content-A {
-        top: 47px;
-        left: 1424px;
+        top: 59px;
+        left: 1515px;
     }
 
     #content-B {
-        top: 160px;
-        left: 861px;
+        top: 134px;
+        left: 927px;
     }
 
     #content-C {
         top: 709px;
         left: 764px;
+    }
+
+    #content-D {
+        top: 298px;
+        left: 579px;
     }
 
     .activity-region-content-title-border {
@@ -145,8 +154,9 @@
 
     .image-taiwan {
         position: absolute;
+        width: 924px;
         top: 68.5px;
-        left: 1046.3px;
+        left: 580px;
     }
 
     .image-people {
@@ -158,5 +168,16 @@
     .image-wave {
         position: absolute;
         bottom: 0px;
+    }
+
+    .rectangle {
+        position: absolute;
+        top: 130px;
+        left: 565px;
+        width: 158px;
+        height: 158px;
+        opacity: 0.27;
+        border-radius: 15px;
+        border: solid 1px #707070;
     }
 </style>
